* Updated actions.cli and buildconfig.yaml

--- a/buildconfig.yaml
+++ b/buildconfig.yaml
@@ -2,7 +2,7 @@ kind: BuildConfig
 apiVersion: build.openshift.io/v1
 metadata:
   name: rhsso73-oraclejdbc-build
-  namespace: openshift
+  namespace: sso
   labels:
     name: rhsso73-oraclejdbc-build
 spec:
@@ -11,6 +11,7 @@ spec:
     to:
       kind: ImageStreamTag
       name: 'redhat-sso73-openshift-oracle:latest'
+      namespace: sso
   resources: {}
   successfulBuildsHistoryLimit: 2
   failedBuildsHistoryLimit: 5
@@ -28,8 +29,7 @@ spec:
       FROM openshift/redhat-sso73-openshift:latest
       USER root
       COPY ./actions.cli ./postconfigure.sh /opt/eap/extensions/
-      RUN chown jboss:jboss /opt/eap/extensions/*
-      RUN chmod 777 /opt/eap/extensions/*.sh
+      RUN chown jboss:jboss /opt/eap/extensions/* && chmod 555 /opt/eap/extensions/*.* && chmod 777 /opt/eap/extensions/*.sh
       USER jboss
       CMD ["/opt/eap/bin/openshift-launch.sh"]
     secrets:
